// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownMenu /> Default story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item dropdown-menu__item--lined"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <a
        class="dropdown-menu__link"
        href="#"
        tabindex="-1"
      >
        Item 4
      </a>
    </li>
  </ul>
</div>
`;

exports[`<DropdownMenu /> WithDeleteButton story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item dropdown-menu__item--error"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Delete Item
      </button>
    </li>
  </ul>
</div>
`;

exports[`<DropdownMenu /> WithIcons story renders snapshot 1`] = `
<div
  class="dropdown-menu"
>
  <ul
    class="dropdown-menu__list"
    role="menu"
  >
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 1
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 2
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 3
      </button>
    </li>
    <li
      class="dropdown-menu__item"
      role="menuitem"
    >
      <button
        class="dropdown-menu__link"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
          />
        </svg>
        Item 4
      </button>
    </li>
  </ul>
</div>
`;
